changes for conflict scenario

--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
 <body>
 
 <h1>|(o_o)|</h1>
-
+<br><br><h2>lol</h2>
 <p>fsgsgsdg sddsf sjfdsigisogm gdf;ll dgfg[splgs
-[gls[
-glsd[
-gsldg
-[sdgds[g s[d
-g lpsdg
-[dslg ps
 gsdg
 [psdgd
 p[gsdg 
