--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
 	<title>test</title>
 </head>
 <body>
+
 <h2>morechanges</h2>
+
 <h1>|(o_o)|</h1>
-<br><br><h2>lol</h2>
-<p>fsgsgsdg sddsf sjfdsigisogm gdf;ll dgfg[splgs
-gsdg
-[psdgd
-p[gsdg 
-[sgls[
-pgdl s[g
-lp sgs
-[pgs[ plsd[gpsdgs[gsd[g
-<h1>a new heading</h1>
-k</p>
+
+<div class="content">
+
+	<h2>lol</h2>
+
+	<p>fsgsgsdg sddsf sjfdsigisogm gdf;ll dgfg[splgsgsdg[psdgdp[gsdg [sgls[pgdl s[glp sgs[pgs[ plsd[gpsdgs[gsd[g</p>
+
+	<h1>a new heading</h1>
+
+	<p>k</p>
+</div>
 </body>
 </html>
